# gao-agile-dev

./: .cliff.toml  .env.example  .gaodev-source  .gitignore  =3.0.0  =3.0.43  BETA_TESTING_CHECKLIST.md  BETA_TEST_REPORT_EPIC_39.8.md  BUG-007-VERIFICATION-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUsersmikejAppDataLocalTempprd_prompt.txt  DEV_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  EPIC_11_STATUS_REPORT.md  HOWTO-RUN.md  INSTALLATION.md  INTEGRATION_COMPLETE.md  ONBOARDING_COMPLETE_VERIFICATION_REPORT.md  PRD.md  PROJECT_CONTEXT.md  PR_EPIC_11.md  QUICKSTART.md  QUICK_START.md  README.md  RELEASE_NOTES_TEST_FIXES.md  STORY_39.37_COMPLETION_REPORT.md  Temptest_migration.db  UPDATE.md  coverage.json  debug_update.py  demo_ceremony_injection.py  fix_state_tracker_tests.py  fix_tests.py  gao_dev.db  pyproject.toml  pytest.ini  reinstall_dev.bat  reinstall_dev.sh  (+13 more)
.claude/: AGENTS_AND_SKILLS_README.md  BUG_TESTING_SETUP.md  CLAUDE.md  FOLDER_STRUCTURE_AND_NAMING_DIRECTIVE.md  settings.json  settings.local.json  settings.local.json.example
.claude/agents/: architect.md  bug-tester.md  business-analyst.md  developer.md  document-keeper.md  e2e-tester.md  product-manager.md  scrum-master.md  test-architect.md
.claude/commands/: benchmark-compare.md  benchmark-help.md  benchmark-report.md  beta-release.md  build.md  bump-version.md  craap.md  doc-implement-phase1.md  doc-review.md  generate-changelog.md  implement-epic.md  install-local.md  list-benchmarks.md  pre-release-check.md  release-help.md  release-status.md  run-benchmark.md  sandbox-clean.md  sandbox-delete.md  sandbox-init.md  sandbox-list.md  sandbox-status.md  test-ui.md  verify-bug-fix.md
.claude/hooks/: QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  documentation-check.py  pre-push-validation.py  skill-evaluation.py
.claude/skills/: release-manager.md
.gao/: context_usage.db
.gao-dev/: documents.db
.github/ISSUE_TEMPLATE/: deprecation-tracking.md
.github/workflows/: beta-release.yml  ci.yml  onboarding-test.yml
Projectsgao-agile-devgao_devwebfrontend/: package-lock.json  package.json
benchmarks/: README.md  simple-api-baseline.yaml  todo-app-baseline.yaml  todo-app-minimal.yaml
benchmarks/templates/: benchmark-template.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
config/: ceremony_triggers.yaml
docs/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  BENCHMARK_STANDARDS.md  BMAD_METHODOLOGY.md  CONTEXT-TRACKING-ROADMAP.md  CONTRIBUTING.md  DEV_TROUBLESHOOTING.md  DOCUMENTATION_CLEANUP_PHASE3_SUMMARY.md  EPIC-7-INTEGRATION-ISSUES.md  FEATURE-ROADMAP.MD  INDEX.md  ITERATION_LOG.md  LOCAL_BETA_TESTING_GUIDE.md  MIGRATION_GUIDE_EPIC_13.md  MIGRATION_PROVIDER.md  ONBOARDING_BUG_TRACKING.md  ONBOARDING_FIXES_SUMMARY.md  ONBOARDING_TESTING_GUIDE.md  QA_STANDARDS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  SETUP_BETA_TESTING.md  STORY-7.1.1-DEBUG-NOTES.md  TROUBLESHOOTING.md  VISUAL_ARCHITECTURE.md  WEB_STARTUP_GUIDE.md  WORKSPACE_HYGIENE.md  benchmarking-philosophy.md  bmm-workflow-status.md  opencode-tool-mapping.md  plugin-development-guide.md  sprint-status.yaml
docs/analysis/: GAP_ANALYSIS_SUMMARY.md  MULTI_AGENT_CEREMONIES_ARCHITECTURE.md  ORCHESTRATION_ARCHITECTURE_REVIEW.md  WISDOM_MANAGEMENT_INTEGRATION.md  WORKFLOW_ORCHESTRATION_AUDIT.md  brian-architecture-analysis.md
docs/archive/: DOCUMENT_AUDIT_REPORT.md  DOCUMENT_LIFECYCLE_ARCHITECTURE_FIX.md  README.md
docs/checklists/: README.md
docs/developers/: ADDING_AGENTS.md  ADDING_WEB_FEATURES.md  ADDING_WORKFLOWS.md  DEVELOPMENT_PATTERNS.md  TESTING_GUIDE.md
docs/examples/: README.md  complete-feature-implementation.md  context-api-examples.md  error-handling-patterns.md  meta-prompt-examples.md  performance-patterns.md  simple-artifacts-benchmark.md  testing-strategies.md
docs/getting-started/: docker-deployment.md  quick-start.md
docs/guides/: credential-management.md  environment-variables.md
docs/migration/: deprecated-commands.md  upgrading-to-v2.md
docs/reference/: api-onboarding.md
docs/troubleshooting/: common-errors.md
examples/: chat_session_demo.py  interactive_brian_demo.py
examples/azure-openai-provider-plugin/: README.md  azure_openai_plugin.py
examples/demo-project/: gao-dev.yaml
examples/plugin-template/: README.md  __init__.py  agent.py  agent_plugin.py  plugin.yaml  requirements.txt
examples/provider-plugin-template/: custom_provider_plugin.py
gao_dev/: __init__.py  __version__.py
gao_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gao_dev/agents/: __init__.py  amelia.agent.yaml  amelia.md  base.py  bob.agent.yaml  bob.md  brian.agent.yaml  brian.md  claude_agent.py  exceptions.py  john.agent.yaml  john.md  mary.agent.yaml  mary.md  murat.agent.yaml  murat.md  sally.agent.yaml  sally.md  winston.agent.yaml  winston.md
gao_dev/checklists/: qa-comprehensive.md
gao_dev/cli/: __init__.py  action_item_commands.py  brownfield_initializer.py  ceremony_commands.py  chat_repl.py  command_router.py  commands.py  context_commands.py  create_feature_command.py  db_commands.py  exceptions.py  greenfield_initializer.py  help_system.py  interactive_prompter.py  learning_commands.py  lifecycle_commands.py  list_features_command.py  migration_commands.py  models.py  preference_manager.py  project_detection.py  project_status.py  provider_commands.py  provider_selector.py  provider_validator.py  report_commands.py  response_formatter.py  sandbox_commands.py  startup_orchestrator.py  startup_result.py  state_commands.py  subcommand_parser.py  tui_wizard.py  unlock_command.py  validate_structure_command.py  web_commands.py  wizard_config.py
gao_dev/config/: auto_injection.yaml  ceremony_limits.yaml  defaults.yaml  governance.yaml  (+3 more)
sandbox/: BOILERPLATE_INFO.md  NEXT_STEPS.md  README.md  gao-dev.yaml
scripts/: build.sh  bump_version.py  cleanup_workspace.bat  cleanup_workspace.sh  install_local.sh  pre_release_check.sh
tests/: TEST_SUMMARY_EPIC35.md  __init__.py  conftest.py  test_example.py  test_package_configuration.py
(+1706 files in other folders)
