# Dynamic versioning: Version is automatically derived from git tags using setuptools-scm
# No manual version updates needed - just tag releases with semantic versions (e.g., v0.1.0-beta.1)
[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gao-dev"
# Version is managed dynamically by setuptools-scm based on git tags
dynamic = ["version"]
description = "GAO-Dev - Software Engineering Team for Generative Autonomous Organisation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GAO Development Team"}
]
keywords = ["ai", "agents", "autonomous", "development", "gao"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "click>=8.1.0",
    "anthropic>=0.34.0",
    "claude-agent-sdk>=0.1.0",
    "structlog>=24.1.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    # OpenCode SDK (Pre-release alpha version)
    # Version: 0.1.0a36 - API may change in future releases
    # Purpose: Python SDK for OpenCode API (replaces CLI subprocess approach)
    "opencode-ai>=0.1.0a36,<0.2.0",
    # NetworkX for graph-based dependency cycle detection (Story 29.4 - C7 Fix)
    "networkx>=3.0",
    # APScheduler for scheduled learning maintenance (Story 29.6)
    "apscheduler>=3.10.0",
    # Prompt-toolkit for enhanced REPL with history and autocomplete (Epic 30)
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-PyYAML",
]

[project.scripts]
gao-dev = "gao_dev.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/memyselfmike/gao-agile-dev"
Documentation = "https://github.com/memyselfmike/gao-agile-dev#readme"
Repository = "https://github.com/memyselfmike/gao-agile-dev"
Issues = "https://github.com/memyselfmike/gao-agile-dev/issues"

[tool.setuptools]
packages = ["gao_dev"]

[tool.setuptools.package-data]
gao_dev = [
    "workflows/**/*",
    "config/**/*",
    "templates/**/*",
    "migrations/**/*",
    "agents/*",
    "checklists/*",
    "sandbox/reporting/templates/**/*",
    "sandbox/reporting/assets/*",
    "../.gaodev-source",  # Source repository marker for safety check
]

[tool.setuptools.exclude-package-data]
"*" = [
    "tests",
    "tests/*",
    "docs",
    "docs/*",
    "sandbox/projects",
    "sandbox/projects/*",
]

# setuptools-scm configuration for dynamic versioning
# Derives version from git tags automatically
[tool.setuptools_scm]
# Use 'no-guess-dev' to avoid complex dev versions - cleaner for beta releases
version_scheme = "no-guess-dev"
# Use 'no-local-version' to avoid local version identifiers in releases
local_scheme = "no-local-version"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gao_dev --cov-report=html --cov-report=term"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "performance: marks tests as performance tests (run with '-m performance')",
    "slow: marks tests as slow tests (deselect with '-m \"not slow\"')",
]

